@@ -1,6 +1,11 @@
 v1.x.x -
-Bug fixes:
-	Fixed vanilla game crash caused by Hornfel trying to enter new door after losing minecart.
+Additions:
+* CharacterMenu:
+	- [Get/Set]ActiveStatus()
+	- CharacterMenuStatus enum
+/newline/
+Fixes:
+	- Fixed vanilla game crash caused by Hornfel trying to enter new door after losing minecart.
 /newline/
 v1.0.11b -
 Bug fixes:
